removing city state link, removing extra padding at top of list, fixing page description to be double quote string and adding to spec

--- a/app/assets/stylesheets/layouts/_container.scss
+++ b/app/assets/stylesheets/layouts/_container.scss
@@ -3,6 +3,5 @@
   padding-bottom: 5em;
 }
 .content-list .main{
-  padding-top: 5em;
   background-color: #f6f6f6;
 }
