--- a/app/assets/stylesheets/layouts/locations.scss
+++ b/app/assets/stylesheets/layouts/locations.scss
@@ -30,11 +30,6 @@
   #map {
     height: 300px;
   }
-
-}
-.city-state-link {
-  text-decoration: underline;
-  color: $text-color;
 }
 .location-search-interior .input-group {
   border: solid $brand-primary;
